--- a/visualisation.qmd
+++ b/visualisation.qmd
@@ -48,7 +48,7 @@ bat_colours_sci <- c("Barbastella barbastellus" = "#1f78b4",
 
 Good visualisation tells a story, removing the noise from the data and illuminating the useful information. We visualise to present information to a lay audience; it also helps interpretation and discussion within the survey team.  Geospatial visualisation is shown on the [Maps](<https://bat-survey-reporting.netlify.app/maps.html>) page. 
 
-Diagrams, charts, figures are ubiquitous; do we still notice them? When a diagram is good it can have great influence, as shown in _100 Diagrams That Changed the World_ [@Scottchristianson2014100:ee53]. Visualisation is the best way of communicating quantitative data and there are many modern examples on how to this; from the ground breaking work of Edward Tufte [@Edwardrtufte1983Visual:1a3f] [@Edwardrtufte2020Seeing:4ec6] through to Alan Smith, at the Financial Times, with _How Charts Work_ [@Alansmith2022Charts:c9ad]. Other examples of data visualisation are: _Information is Beautiful_ [@Davidmccandless2012Information:84d3]; _Data Points - Visualization that means something_ [@yau_data_2013]; and, _Visualize This - The Flowing Data Guide to Design, Visualization, and Statistics_ [@yau_visualize_2011]. 
+Diagrams, charts, figures are ubiquitous; do we still notice them? When a diagram is good it can have great influence, as shown in _100 Diagrams That Changed the World_ [@Scottchristianson2014100:ee53]. Visualisation is the best way of communicating quantitative data and there are many modern examples on how to this; from the ground breaking work of Edward Tufte [@Edwardrtufte1983Visual:1a3f] [@Edwardrtufte2020Seeing:4ec6] through to Alan Smith, at the Financial Times, with _How Charts Work_ [@Alansmith2022Charts:c9ad]. The Royal Statistical Society has published [Best Practices for Data Visualisation](https://royal-statistical-society.github.io/datavisguide/) providing insights, advice, and examples (with code) to make data outputs more readable, accessible, and impactful.  Other examples of data visualisation are: _Information is Beautiful_ [@Davidmccandless2012Information:84d3]; _Data Points - Visualization that means something_ [@yau_data_2013]; and, _Visualize This - The Flowing Data Guide to Design, Visualization, and Statistics_ [@yau_visualize_2011]. 
 
 
 ## Bat Colours  
